Fixed SVG shadow on Safari.

--- a/coming-soon.css
+++ b/coming-soon.css
@@ -9,7 +9,7 @@ html, body {
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-svg.logo {
+.svg-shadow {
   margin-top: 50px;
   -webkit-filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.3));
           filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.3));
